# Object-Oriented-Programming

./: CMakeLists.txt  README.md
kolokvium1/: auditoriska1.cpp  auditoriska3.cpp  lab1.cpp  lab2.cpp  lab3.cpp  mendozadaca.cpp  primerkvalifikaciski.cpp  static_zadaca.cpp  stefani.cpp  vezbak1.1.cpp
kolokvium1/Vezbi_kol1/: klasibezoperatori.cpp  vezbik1_kraj.cpp  zadaca1.cpp  zadaca11.cpp  zadaca13.cpp  zadaca21.cpp  zadaca3.cpp  zadaca6.cpp  zadaca7.cpp  zadaca8.cpp
kolokvium2/: juni2024_ispit.cpp  kolokvium2_2024.cpp  lab4.cpp  lab5.cpp  lab6.cpp  lab7.cpp  nasleduvanje.cpp  polimorfizam.cpp  septemvri2024_ispit.cpp  temporary.cpp
kolokvium2/Vezbi_kol2/: zadaca14.cpp  zadaca17.cpp  zadaca7.cpp  zadacaX.cpp
