cmake_minimum_required(VERSION 3.29)
project(OOP_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP_1 main.cpp)
add_executable(hello_world kolokvium1/hello_world.cpp)
add_executable(auditoriska1 kolokvium1/auditoriska1.cpp)
add_executable(mendozadaca kolokvium1/mendozadaca.cpp)
add_executable(auditoriska3 kolokvium1/auditoriska3.cpp)
add_executable(lab1 kolokvium1/lab1.cpp)
add_executable(primerkvalifikaciski kolokvium1/primerkvalifikaciski.cpp)
add_executable(stefani kolokvium1/stefani.cpp)
add_executable(lab2 kolokvium1/lab2.cpp)
add_executable(static_zadaca kolokvium1/static_zadaca.cpp)
add_executable(vezbak1.1 kolokvium1/vezbak1.1.cpp)
add_executable(lab3 kolokvium1/lab3.cpp)

add_executable(zadaca1 kolokvium1/Vezbi_kol1/zadaca1.cpp)
add_executable(zadaca3 kolokvium1/Vezbi_kol1/zadaca3.cpp)
add_executable(zadaca5 kolokvium1/Vezbi_kol1/zadaca5.cpp)
add_executable(zadaca6 kolokvium1/Vezbi_kol1/zadaca6.cpp)
add_executable(zadaca7 kolokvium1/Vezbi_kol1/zadaca7.cpp)
add_executable(zadaca8 kolokvium1/Vezbi_kol1/zadaca8.cpp)
add_executable(zadaca11 kolokvium1/Vezbi_kol1/zadaca11.cpp)
add_executable(zadaca12 kolokvium1/Vezbi_kol1/zadaca12.cpp)
add_executable(zadaca13 kolokvium1/Vezbi_kol1/zadaca13.cpp)
add_executable(zadaca21 kolokvium1/Vezbi_kol1/zadaca21.cpp)
add_executable(klasibezoperatori kolokvium1/Vezbi_kol1/klasibezoperatori.cpp)
add_executable(vezbik1_kraj kolokvium1/Vezbi_kol1/vezbik1_kraj.cpp)


add_executable(lab4 kolokvium2/lab4.cpp)
add_executable(hello_world2 kolokvium2/hello_world.cpp)
add_executable(zadacaX kolokvium2/Vezbi_kol2/zadacaX.cpp)
add_executable(nasleduvanje kolokvium2/nasleduvanje.cpp)
add_executable(lab5 kolokvium2/lab5.cpp)
add_executable(polimorfizam kolokvium2/polimorfizam.cpp)
add_executable(lab6 kolokvium2/lab6.cpp)
add_executable(lab7 kolokvium2/lab7.cpp)
add_executable(zadaca17 kolokvium2/Vezbi_kol2/zadaca17.cpp)
add_executable(zadaca14 kolokvium2/Vezbi_kol2/zadaca14.cpp)
add_executable(zadaca7a kolokvium2/Vezbi_kol2/zadaca7.cpp)
add_executable(kolokvium2_2024 kolokvium2/kolokvium2_2024.cpp)
add_executable(juni2024_ispit kolokvium2/juni2024_ispit.cpp)
add_executable(temporary kolokvium2/temporary.cpp)
add_executable(septemvri2024_ispit kolokvium2/septemvri2024_ispit.cpp)
